fix: avatar and voting ui overlap

--- a/resources/less/forum/alternateLayout.less
+++ b/resources/less/forum/alternateLayout.less
@@ -15,6 +15,11 @@
   min-height: 150px;
 }
 
+.DiscussionListItem-votes.alternateLayout + .DiscussionListItem-author {
+  margin-left: -2px;
+  margin-right: 12px;
+}
+
 .DiscussionListItem-votes.alternateLayout,
 .Post-votes {
   position: absolute;
